increase leading and fix schedule alignment

--- a/css/layout.scss
+++ b/css/layout.scss
@@ -173,7 +173,7 @@ article {
       margin-bottom: 30px;
     }
     div:nth-of-type(2){
-      width: 30%;
+      width: 24%;
       text-align: left;
       padding-right: 0;
     }
