--- a/css/typography.scss
+++ b/css/typography.scss
@@ -17,7 +17,7 @@
    line-height: 23px;
    @include at-mobile {
       font-size: 16px;
-      line-height: 20px;
+      line-height: 22px;
    }
 }
 
